Creating blogpost routing & more.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const posts = await Astro.glob('../pages/blog/*.md');
 ---
 
 <Layout title="Welcome to Astro.">
