--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+//import Card from '../components/Card.astro';
 ---
 
 <Layout title="Woodbox">
 	<main>
 		<h1>Woodbox</h1>
+		<hr>
+		<ol>
+			<li><a href="https://www.woodboxes.co/contact">Contact</a></li>
+			<li><a href="https://www.woodboxes.co/privacy-policy">Privacy policy</a></li>
+			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
+		</ol>
 	</main>
 </Layout>
