--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,12 @@
     --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 }
 
-html {
-    font-family: system-ui, sans-serif;
+body {
+    scroll-behavior: smooth;
     background-color: #F6F6F6;
+    font-family: 'Quicksand', sans-serif;
 }
+
 code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
         Bitstream Vera Sans Mono, Courier New, monospace;
@@ -15,5 +17,11 @@ code {
 
 * {
     margin: 0;
-    
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Sigmar', cursive;
+    font-weight: bold;
 }
