--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-//import Card from '../components/Card.astro';
+import Footer from '../components/footer/Footer.astro';
 ---
 
 <Layout title="Woodbox">
@@ -12,5 +12,6 @@ import Layout from '../layouts/Layout.astro';
 			<li><a href="https://www.woodboxes.co/privacy-policy">Privacy policy</a></li>
 			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
 		</ol>
+		<Footer />
 	</main>
 </Layout>
