--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -9,3 +9,28 @@ import "/style.css";
 <footer>
     2023 © Woodbox LLC
 </footer>
+
+<style>
+
+    footer {
+        display: grid;
+        place-items: center;
+        padding: 20px;
+        margin: 0 auto;
+        max-width: 800px;
+
+        position: absolute;
+        left: 20px;
+        right: 20px;
+        bottom: 20px;
+        height: 20px;
+
+        border-radius: 20px;
+        box-shadow: 0px 0px 10px 10px rbga(0, 0, 0, 0.5);
+        font-size: medium;
+        font-weight: 600;
+        background: #111;
+        color: #fff;
+    }
+
+</style>
