--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -24,7 +24,7 @@ export interface Props {
         height: 20px;
 
         border-radius: 20px;
-        box-shadow: 0px 0px 10px 10px rbga(0, 0, 0, 0.5);
+        box-shadow: 0px 0px 10px 10px #7775;
         font-size: medium;
         font-weight: 600;
         background: #111;
