--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Sigmar&display=swap');
+
 :root {
     --first-color: red;
     --accent: 124, 58, 237;
