--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ export interface Props {
 }
 
 import "../styles/globals.css";
+import Footer from '../components/footer/Footer.astro';
 const { title } = Astro.props;
 ---
 
@@ -21,5 +22,6 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<slot />
+		<Footer />
 	</body>
 </html>
