--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
 ---
@@ -11,4 +12,5 @@ import "../styles/contact.css";
             <li><a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank">Instagram</a></li>
         </ol>
     </main>
+    <Footer />
 </Layout>
