--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/privacy.css";
 ---
@@ -201,4 +202,5 @@ import "../styles/privacy.css";
         <li>By visiting this page on our website: <a href="https://www.woodbox.co/contact" rel="external nofollow noopener" target="_blank">https://www.woodbox.co/contact</a></li>
         </ul>
     </main>
+    <Footer />
 </Layout>
