--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/terms.css";
 ---
@@ -88,4 +89,5 @@ import "../styles/terms.css";
         <li>By visiting this page on our website: <a href="https://www.woodboxes.co/contact" rel="external nofollow noopener" target="_blank">https://www.woodboxes.co/terms</a></li>
         </ul>
     </main>
+    <Footer />
 </Layout>
