--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/footer/Footer.astro';
 ---
 
 <Layout title="Woodbox">
@@ -12,4 +13,5 @@ import Layout from '../layouts/Layout.astro';
 			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
 		</ol>
 	</main>
+	<Footer />
 </Layout>
