--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -13,16 +13,11 @@ export interface Props {
     footer {
         display: grid;
         place-items: center;
-        margin: 0 auto;
+        margin: 20px auto;
         max-width: 800px;
-
-        position: absolute;
-        left: 20px;
-        right: 20px;
-        bottom: 20px;
         height: 40px;
-
-        border-radius: 20px;
+        width: 100%;
+        border-radius: 15px;
         box-shadow: 0px 0px 10px 10px #7775;
         font-size: medium;
         font-weight: 600;
