Importing Header on all pages

--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -1,10 +1,12 @@
 ---
+import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/terms.css";
 ---
 
 <Layout title="WoodBox: Terms & Conditions">
+    <Header />
     <main>
         <h1>Terms and Conditions</h1>
         <p>Last updated: May 03, 2023</p>
