--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,12 @@
 ---
+import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
 ---
 
 <Layout title="WoodBox: Contact US">
+    <Header />
     <main>
         <h1>Contact US</h1>
         <hr>
