--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
+import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Woodbox">
+	<Header />
 	<main>
 		<h1>Woodbox</h1>
 		<hr>
