--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,10 +1,12 @@
 ---
+import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/privacy.css";
 ---
 
 <Layout title="WoodBox: Privacy Policy">
+    <Header />
     <main>
         <h1>Privacy Policy</h1>
         <p>Last updated: May 03, 2023</p>
