--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Layout from '../layouts/Layout.astro';
 		<h1>Woodbox</h1>
 		<hr>
 		<ol>
+			<li><a href="https://www.woodboxes.co/team">Team</a></li>
 			<li><a href="https://www.woodboxes.co/contact">Contact</a></li>
 			<li><a href="https://www.woodboxes.co/privacy-policy">Privacy policy</a></li>
 			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
