--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -34,6 +34,6 @@ import "../styles/contact.css";
             </form>
         </div>
     </main>
-    <script src="/assets/js/contact.js"></script>
+    <script src="/assets/js/contact.js" is:inline></script>
     <Footer />
 </Layout>
