--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,12 @@ import Layout from '../layouts/Layout.astro';
 			<li><a href="https://www.woodboxes.co/privacy-policy">Privacy policy</a></li>
 			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
 		</ol>
+
+		<hr>
+		<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
+			<h3 class="uk-card-title">Default</h3>
+			<p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
 	</main>
 	<Footer />
 </Layout>
