--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,68 +2,49 @@
 export interface Props {
 }
 //const { } = Astro.props;
+
+const base_url = "https://www.woodboxes.co";
 ---
 
 <header>
-    <nav>
-        <ul>
-            <li>
-                <a href="https://www.woodboxes.co/" rel="noreferrer">
-                    <img src="./assets/brand/logo.png" alt="Logo Woodbox" />
-                </a>
-            </li>
-        </ul>
-        <ul>
-            <li><a href="https://www.woodboxes.co/">Home</a></li>
-            <li><a href="https://www.woodboxes.co/team">Equipo</a></li>
-            <li><a href="https://www.woodboxes.co/contact">Contacto</a></li>
-        </ul>
-    </nav>
+
+  <nav class="uk-navbar-container">
+    <div class="uk-container">
+        <div uk-navbar>
+
+            <div class="uk-navbar-left">
+
+                <ul class="uk-navbar-nav">
+                    <li class="uk-active">
+                      <a href=`${base_url}/`/>
+                        <img src="./assets/brand/logo.png" alt="Logo Woodbox" />
+                      </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="uk-navbar-right">
+
+                <ul class="uk-navbar-nav">
+                    <li class="uk-active"><a href=`${base_url}/`>Home</a></li>
+                    <li>
+                        <a href="#">About us</a>
+                        <div class="uk-navbar-dropdown">
+                            <ul class="uk-nav uk-navbar-dropdown-nav">
+                                <li><a href=`${base_url}/team`>Equipo</a></li>
+                                <li><a href=`${base_url}/about`>Acerca de Nosotros</a></li>
+                                <li><a href=`${base_url}/terms`>Terminos y Condiciones</a></li>
+                                <li><a href=`${base_url}/privacy-policy`>Política de Privacidad</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+
+            </div>
+
+        </div>
+    </div>
+  </nav>
 </header>
-
-<style>
-header {
-  margin: 20px auto;
-  max-width: 800px;
-  background: #fff;
-  border: 0.5px solid #3335;
-  border-radius: 10px;
-}
-
-nav {
-  justify-content: space-around;
-}
-
-nav, ul {
-  display: flex;
-}
-
-ul, li {
-  list-style: none;
-}
-
-ul li a img {
-  width: 100px;
-  height: 80px;
-  object-fit: contain;
-}
-
-ul:nth-child(2) li {
-  width: fit-content;
-  padding: 15px 20px;
-  border-radius: 10px;
-  margin: 10px;
-  background: #555;
-  transition: 0.5s ease-in-out;
-}
-
-ul:nth-child(2) li:hover {
-  background: #333;
-}
-
-a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-}
-</style>
