--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -10,14 +10,14 @@ const base_url = "https://www.woodboxes.co";
 
   <nav class="uk-navbar-container">
     <div class="uk-container">
-        <div uk-navbar>
+        <div uk-navbar class="uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
 
                 <ul class="uk-navbar-nav">
                     <li class="uk-active">
-                      <a href=`${base_url}/`/>
-                        <img src="./assets/brand/logo.png" alt="Logo Woodbox" />
+                      <a class="uk-logo" href=`${base_url}/`/>
+                        <img width="125px" height="100px" src="./assets/brand/logo.png" alt="Logo Woodbox" />
                       </a>
                     </li>
                 </ul>
@@ -27,9 +27,9 @@ const base_url = "https://www.woodboxes.co";
             <div class="uk-navbar-right">
 
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href=`${base_url}/`>Home</a></li>
+                    <li class="uk-active"><a href=`${base_url}/`>Inicio</a></li>
                     <li>
-                        <a href="#">About us</a>
+                        <a href="#">Nosotros</a>
                         <div class="uk-navbar-dropdown">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                 <li><a href=`${base_url}/team`>Equipo</a></li>
@@ -39,7 +39,7 @@ const base_url = "https://www.woodboxes.co";
                             </ul>
                         </div>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
 
             </div>
