--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -10,16 +10,12 @@ const base_url = "https://www.woodboxes.co";
 
   <nav class="uk-navbar-container">
     <div class="uk-container">
-        <div uk-navbar class="uk-background-secondary uk-box-shadow-small" style="height: 100px;">
+        <div uk-navbar class="uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
 
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active">
-                      <a class="uk-logo" href=`${base_url}/`/>
-                        <img width="125px" height="100px" src="./assets/brand/logo.png" alt="Logo Woodbox" />
-                      </a>
-                    </li>
+                    <li class="uk-active"><a class="uk-logo" href=`${base_url}/`/>WoodBox</a></li>
                 </ul>
 
             </div>
