--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -13,11 +13,7 @@ const base_url = "https://www.woodboxes.co";
         <div uk-navbar class="uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
-
-                <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a class="uk-logo" href=`${base_url}/`/>WoodBox</a></li>
-                </ul>
-
+                <a class="uk-logo" href=`${base_url}/`/>WoodBox</a>
             </div>
 
             <div class="uk-navbar-right">
