--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -6,9 +6,7 @@ export interface Props {
 const base_url = "https://www.woodboxes.co";
 ---
 
-<header>
-
-  <nav class="uk-navbar-container">
+  <nav class="uk-navbar-container uk-margin-top">
     <div class="uk-container">
         <div uk-navbar class="uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
@@ -39,4 +37,3 @@ const base_url = "https://www.woodboxes.co";
         </div>
     </div>
   </nav>
-</header>
