--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -14,7 +14,7 @@ const base_url = "https://www.woodboxes.co";
                 <a class="uk-logo uk-active" href=`${base_url}/`>WoodBox</a>
             </div>
 
-            <div class="uk-navbar-right">
+            <div class="uk-navbar-right" style="flex-wrap: nowrap;">
 
                 <ul class="uk-navbar-nav">
                     <li class="uk-active"><a href=`${base_url}/`>Inicio</a></li>
