--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -11,18 +11,12 @@ export interface Props {
 <style>
 
     footer {
-        display: grid;
-        place-items: center;
-        margin: 20px auto;
-        max-width: 800px;
-        height: 40px;
-        width: 100%;
-        border-radius: 15px;
-        box-shadow: 0px 0px 10px 10px #7775;
-        font-size: medium;
+        margin: 0 auto;
+        font-size: small;
+        text-transform: uppercase;
+        text-align: center;
         font-weight: 600;
-        background: #111;
-        color: #fff;
+        color: #111;
     }
 
 </style>
