--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -29,7 +29,7 @@ const base_url = "https://www.woodboxes.co";
                             </ul>
                         </div>
                     </li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href=`${base_url}/contact`>Contacto</a></li>
                 </ul>
 
             </div>
