--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -11,12 +11,12 @@ export interface Props {
 <style>
 
     footer {
-        margin: 0 auto;
+        margin: 20px auto;
         font-size: small;
         text-transform: uppercase;
         text-align: center;
         font-weight: 600;
-        color: #111;
+        color: #666;
     }
 
 </style>
