--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,29 +8,42 @@ import "../styles/contact.css";
 <Layout title="WoodBox: Contact US">
     <Header />
     <main>
-        <h1>Contact US</h1>
+        <h1>Contact US</h1>a
         <hr>
         <ul>
             <li><a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank">Instagram</a></li>    
         </ul>
         <div>
             <form method="POST" action="#" id="formContactV1">
-                <div>
-                    <label for="form_name">Nombre: </label>
-                    <input name="form_name" id="form_name" type="text" placeholder="Nombre completo" required/>
-                </div>
-                <div>
-                    <label for="form_name">Correo: </label>
-                    <input name="form_email" id="form_email" type="email" placeholder="Correo electronico" required/>
-                </div>
-                <div>
-                    <label for="form_message">Mensaje: </label>
-                    <textarea id="form_message" rows="4" name="form_message" placeholder="..." required ></textarea>
-                </div>
-                <div>
-                    <input type="reset" />
-                    <input type="submit" id="form_submit" value="Enviar">
-                </div>
+                <fieldset class="uk-fieldset">
+            
+                    <legend class="uk-legend">Contactanos</legend>
+        
+                    <label class="uk-form-label" for="form_name">Nombre Completo: </label>
+                    <div class="uk-margin uk-inline">
+                        <span class="uk-form-icon" uk-icon="icon: user"></span>
+                        <input class="uk-input" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
+                    </div>
+
+                    <label class="uk-form-label" for="form_email">Correo Electronico: </label>
+                    <div class="uk-margin uk-inline">
+                        <span class="uk-form-icon" uk-icon="icon: mail"></span>
+                        <input class="uk-input" type="email" name="form_email" id="form_email" placeholder="john.does@gmail.com" aria-label="Email" required>
+                    </div>
+            
+                    <label class="uk-form-label" for="form_message">Mensaje: </label>
+                    <div class="uk-margin">
+                        <textarea class="uk-textarea" name="form_message" rows="5" id="form_message" placeholder="Mensaje" aria-label="Mensaje" required></textarea>
+                    </div>
+            
+                    <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                        <label><input class="uk-checkbox" type="checkbox" required> <small>Autorizo el tratamiento de mis datos personales</small></label>
+                    </div>
+            
+                    <div class="uk-margin">
+                        <button class="uk-button uk-border-rounded uk-button-primary" type="submit" id="form_submit" value="Enviar">Enviar</button>
+                    </div>
+                </fieldset>
             </form>
         </div>
     </main>
