contact form css .2

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,13 +8,13 @@ import "../styles/contact.css";
 <Layout title="WoodBox: Contact US">
     <Header />
     <main>
-        <h1>Contact US</h1>a
+        <h1>Contact US</h1>
         <hr>
         <ul>
             <li><a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank">Instagram</a></li>    
         </ul>
         <div>
-            <form method="POST" class="uk-form-stacked uk-grid-small" uk-grid action="#" id="formContactV1">
+            <form method="POST" class="uk-form-horizontal" uk-grid action="#" id="formContactV1">
                 <fieldset class="uk-fieldset">
             
                     <legend class="uk-legend">Contactanos</legend>
