contact form css .5

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -18,12 +18,10 @@ import "../styles/contact.css";
                 <fieldset class="uk-fieldset">
             
                     <legend class="uk-legend">Contactanos</legend>
-                        <div class="uk-margin uk-inline">
-                            <span class="uk-form-icon" uk-icon="icon: user"></span>
+                        <div class="uk-margin">
                             <input class="uk-input uk-form-width-large" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
                         </div>
-                        <div class="uk-margin uk-inline">
-                            <span class="uk-form-icon" uk-icon="icon: mail"></span>
+                        <div class="uk-margin">
                             <input class="uk-input uk-form-width-large" type="email" name="form_email" id="form_email" placeholder="john.does@gmail.com" aria-label="Email" required>
                         </div>
                         <div class="uk-margin">
