contact form css .8

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,13 +16,13 @@ import "../styles/contact.css";
         <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
             <form method="POST" class="uk-form-horizontal" action="#" id="formContactV1">
                 <div class="uk-margin">
-                    <input class="uk-input uk-form-width-large" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
+                    <input class="uk-input" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
                 </div>
                 <div class="uk-margin">
-                    <input class="uk-input uk-form-width-large" type="email" name="form_email" id="form_email" placeholder="john.does@gmail.com" aria-label="Email" required>
+                    <input class="uk-input" type="email" name="form_email" id="form_email" placeholder="john.does@gmail.com" aria-label="Email" required>
                 </div>
                 <div class="uk-margin">
-                    <textarea class="uk-textarea uk-form-width-large" name="form_message" rows="5" id="form_message" placeholder="Mensaje" aria-label="Mensaje" required></textarea>
+                    <textarea class="uk-textarea" name="form_message" rows="5" id="form_message" placeholder="Mensaje" aria-label="Mensaje" required></textarea>
                 </div>
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
                     <label>
