--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,15 +5,15 @@ import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
 ---
 
-<Layout title="WoodBox: Contact US">
+<Layout title="WoodBox: Contactanos">
     <Header />
     <main>
-        <h1>Contact US</h1>
+        <h1>Contactanos</h1>
         <hr>
         <ul>
             <li><a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank">Instagram</a></li>    
         </ul>
-        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
+        <div class="uk-border-rounded uk-card uk-card-default uk-card-body uk-width-1-2@m">
             <form method="POST" class="uk-form-horizontal" action="#" id="formContactV1">
                 <div class="uk-margin">
                     <input class="uk-input" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
