contact form css .10

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -8,13 +8,14 @@ import "../styles/contact.css";
 <Layout title="WoodBox: Contactanos">
     <Header />
     <main>
-        <h1>Contactanos</h1>
-        <hr>
         <ul>
-            <li><a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank">Instagram</a></li>    
+            <li>
+                <a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank" uk-icon="icon: instagram"></a>
+            </li>    
         </ul>
         <div class="uk-border-rounded uk-card uk-card-default uk-card-body uk-width-1-2@m">
             <form method="POST" class="uk-form-horizontal" action="#" id="formContactV1">
+                <legend class="uk-legend">Contactanos</legend>
                 <div class="uk-margin">
                     <input class="uk-input" id="form_name" name="form_name" type="text" placeholder="John Doe" aria-label="Name" required>
                 </div>
