fix bad ux by uikit

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,10 +10,10 @@ import "../styles/contact.css";
     <main>
         <ul>
             <li>
-                <a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" target="_blank" uk-icon="icon: instagram"></a>
+                <a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" uk-icon="icon: instagram" target="_blank"></a>
             </li>    
         </ul>
-        <div class="uk-border-rounded uk-card uk-card-default uk-card-body uk-width-1-2@m">
+        <div class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
             <form method="POST" class="uk-form-horizontal" action="#" id="formContactV1">
                 <legend class="uk-legend">Contactanos</legend>
                 <div class="uk-margin">
