--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,8 +21,8 @@ import "../components/uikit/css/uikit-rtl.min.css";
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Sigmar&display=swap" rel="stylesheet">
-		<script src="../components/uikit/js/uikit.min.js"></script>
-		<script src="../components/uikit/js/uikit-icons.min.js"></script>
+		<script is:inline src="../components/uikit/js/uikit.js"></script>
+		<script is:inline src="../components/uikit/js/uikit-icons.js"></script>
 		
 		<title>{title}</title>
 	</head>
