fix bad ux by uikit

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ import "../components/uikit/css/uikit-rtl.min.css";
 	<body>
 		<slot />
 
-		<script is:inline src="../components/uikit/js/uikit.js"></script>
-		<script is:inline src="../components/uikit/js/uikit-icons.js"></script>
+		<script src="../components/uikit/js/uikit.js"></script>
+		<script src="../components/uikit/js/uikit-icons.js"></script>
 	</body>
 </html>
