--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,10 @@ import "../styles/contact.css";
     <main>
         <ul>
             <li>
-                <a href="https://www.instagram.com/woodbox_co/" rel="external nofollow noopener" uk-icon="icon: instagram" target="_blank"></a>
+                <a href="https://www.instagram.com/woodbox_co/" class="uk-link-muted" rel="external nofollow noopener" target="_blank">
+                    <img src="https://img.icons8.com/ios-glyphs/30/null/instagram-new.png" />
+                    @WoodBox_co
+                </a>
             </li>    
         </ul>
         <div class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
