contact in final steps!

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,6 +16,16 @@ import "../styles/contact.css";
                 </a>
             </li>    
         </ul>
+        <div class="uk-alert-primary" uk-alert>
+            <a class="uk-alert-close" uk-close></a>
+            <p>
+                <img src="https://img.icons8.com/ios-glyphs/30/null/instagram-new.png" />
+                Siguenos en Instagram para màs contenido relacionado como:
+                <a href="https://www.instagram.com/woodbox_co/" class="uk-link-muted" rel="external nofollow noopener" target="_blank">
+                    @WoodBox_co
+                </a>
+            </p>
+        </div>
         <div class="uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body">
             <form method="POST" class="uk-form-horizontal" action="#" id="formContactV1">
                 <legend class="uk-legend">Contactanos</legend>
