--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -11,32 +11,25 @@ import "../styles/contact.css";
         <h1>WoodBox Team</h1>
         <hr>
         <div class="container" uk-grid id="cards-container">
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-                <div class="uk-card-badge uk-label">ROLE</div>
+            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
         </div>
