--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -5,12 +5,12 @@ import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
 ---
 
-<Layout title="WoodBox: Team">
+<Layout title="Equipo de WoodBox">
     <Header />
     <main>
-        <h1>WoodBox Team</h1>
+        <h1>Equipo de WoodBox</h1>
         <hr>
-        <div class="container" uk-grid id="cards-container">
+        <div class="uk-box-shadow-small uk-border-rounded uk-card uk-padding container" uk-grid>
             <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
