--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -10,26 +10,14 @@ import "../styles/contact.css";
     <main>
         <h1>Equipo de WoodBox</h1>
         <hr>
-        <div class="uk-box-shadow-small uk-border-rounded uk-card uk-padding container" uk-grid>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
+        <div class="uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding">
+            <div class="uk-background-primary uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
+            <div class="uk-background-primary uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title">Title</h3>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title">Title</h3>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title">Title</h3>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title">Title</h3>
-            </div>
-            <div class="uk-card uk-card-default uk-card-body uk-width-1-2@s">
+            <div class="uk-background-primary uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title">Title</h3>
             </div>
         </div>
