--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -10,14 +10,14 @@ import "../styles/contact.css";
     <main>
         <h1>Equipo de WoodBox</h1>
         <hr>
-        <div class="uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding" uk-grid>
-            <div class="uk-background-primary uk-card uk-card-default uk-margin uk-card-body uk-width-1-2@s">
+        <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding" uk-grid>
+            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title uk-text-muted">Title</h3>
             </div>
-            <div class="uk-background-primary uk-card uk-card-default uk-margin uk-card-body uk-width-1-2@s">
+            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title uk-text-muted">Title</h3>
             </div>
-            <div class="uk-background-primary uk-card uk-card-default uk-margin uk-card-body uk-width-1-2@s">
+            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
                 <h4 class="uk-card-title uk-text-muted">Title</h3>
             </div>
         </div>
