--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -11,14 +11,14 @@ import "../styles/contact.css";
         <h1>Equipo de WoodBox</h1>
         <hr>
         <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding" uk-grid>
-            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title uk-text-muted">Title</h3>
+            <div class="uk-background-muted">
+                <h4 class="uk-text-muted">Title</h3>
             </div>
-            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title uk-text-muted">Title</h3>
+            <div class="uk-background-muted">
+                <h4 class="uk-text-muted">Title</h3>
             </div>
-            <div class="uk-background-muted uk-card uk-card-default uk-card-body uk-width-1-2@s">
-                <h4 class="uk-card-title uk-text-muted">Title</h3>
+            <div class="uk-background-muted">
+                <h4 class="uk-text-muted">Title</h3>
             </div>
         </div>
     </main>
