Sobre nosotros page p.3

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,24 +16,24 @@ const valores = "Responsabilidad, Respeto, Calidad, Cooperación, Escucha, Puntu
             <h1>Mision, Vision y Valores de la empresa</h1>
             <hr>
             <div>
-                <div>
-                    <div class="uk-tile uk-tile-primary uk-padding-small">
+                <div style="width: fit-content;">
+                    <div class="uk-border-rounded uk-tile uk-tile-primary uk-padding-small">
                         <p class="uk-h4">Mision</p>
                     </div>
                 </div>
                 <p>{mision}</p>
             </div>
             <div>
-                <div>
-                    <div class="uk-tile uk-tile-primary uk-padding-small">
+                <div style="width: fit-content;">
+                    <div class="uk-border-rounded uk-tile uk-tile-primary uk-padding-small">
                         <p class="uk-h4">Vision</p>
                     </div>
                 </div>
                 <p>{vision}</p>
             </div>
             <div>
-                <div>
-                    <div class="uk-tile uk-tile-primary uk-padding-small">
+                <div style="width: fit-content;">
+                    <div class="uk-border-rounded uk-tile uk-tile-primary uk-padding-small">
                         <p class="uk-h4">Valores</p>
                     </div>
                 </div>
