--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,19 +7,8 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Woodbox">
 	<Header />
 	<main>
-		<h1>Woodbox</h1>
-		<hr>
-		<ol>
-			<li><a href="https://www.woodboxes.co/team">Team</a></li>
-			<li><a href="https://www.woodboxes.co/contact">Contact</a></li>
-			<li><a href="https://www.woodboxes.co/privacy-policy">Privacy policy</a></li>
-			<li><a href="https://www.woodboxes.co/terms">Terms</a></li>
-		</ol>
-
-		<hr>
-		<div class="uk-card uk-card-default uk-card-body uk-width-1-2@m">
-			<h3 class="uk-card-title">Default</h3>
-			<p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		<div class="uk-margin uk-border-rounded uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="https://images.unsplash.com/photo-1490822180406-880c226c150b?fit=crop&w=650&h=433&q=80" uk-img>
+			<h1>WoodBox_ Custom Works</h1>
 		</div>
 	</main>
 	<Footer />
