--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -6,9 +6,9 @@ export interface Props {
 const base_url = "https://www.woodboxes.co";
 ---
 
-  <nav class="uk-navbar-container uk-margin-top">
+  <nav class="uk-navbar-container">
     <div class="uk-container">
-        <div uk-navbar class="uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
+        <div uk-navbar class="uk-margin-top uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
                 <a class="uk-logo uk-active" href=`${base_url}/`>WoodBox</a>
@@ -17,7 +17,7 @@ const base_url = "https://www.woodboxes.co";
             <div class="uk-navbar-right" style="flex-wrap: nowrap;">
 
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active"><a href=`${base_url}/`>Inicio</a></li>
+                    <li><a href=`${base_url}/`>Inicio</a></li>
                     <li>
                         <a href="#">Nosotros</a>
                         <div class="uk-navbar-dropdown">
