--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -3,24 +3,55 @@ import Header from '../components/header/Header.astro';
 import Footer from '../components/footer/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import "../styles/contact.css";
+
+const team = [
+    {
+        name: "Celeste Rodriguez",
+        profession: ""
+    },
+    {
+        name: "Emanuel Zabaleta",
+        profession: ""
+    },
+    {
+        name: "Ariana Ramos",
+        profession: ""
+    },
+    {
+        name: "Santiago Molina",
+        profession: ""
+    },
+    {
+        name: "Angie Sandoval",
+        profession: ""
+    },
+    {
+        name: "Joseph Bernal",
+        profession: ""
+    }
+];
 ---
 
 <Layout title="Equipo de WoodBox">
     <Header />
     <main>
-        <h1>Equipo de WoodBox</h1>
-        <hr>
-        <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding" uk-grid>
-            <div class="uk-background-muted">
-                <h4 class="uk-text-muted">Title</h3>
-            </div>
-            <div class="uk-background-muted">
-                <h4 class="uk-text-muted">Title</h3>
-            </div>
-            <div class="uk-background-muted">
-                <h4 class="uk-text-muted">Title</h3>
+        <div class="uk-grid-divider uk-child-width-expand@s uk-background-default uk-box-shadow-small uk-border-rounded uk-card uk-padding">
+            <h1>Equipo de WoodBox</h1>
+            <hr>
+            <div uk-grid id="team_members">
             </div>
         </div>
     </main>
     <Footer />
+    <script is:inline>
+        team.forEach((person) => {
+            const article = document.createRange().createContextualFragment(/*html*/ `
+                <div style="width: fit-content;" class="uk-border-rounded uk-tile uk-tile-primary uk-padding-small">
+                    <p class="uk-h4">${person.name}</p>
+                    <!-- <small>${person.profession}</small> -->
+                </div>
+            `);
+            const team_members = document.getElementById("team_members").append(article);
+        });
+    </script>
 </Layout>
