--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import "../styles/contact.css";
 
 const mision = "Promover un ambiente divertido y seguro donde cada uno de los clientes disfruten de las manualidades realizadas por nosotros mismos con excelente calidad y precios accesibles. Queremos que nuestros clientes guarden sus tesoros con estilo y funcionalidad. De tal forma que está sea la mejor opción y que las personas no duden en ir a su negocio.";
 const vision = 'La visón de Woodbox es "ser el lugar y la forma de satisfacción de sus clientes", lo que obliga a nosotros como empresarios a dirigir esfuerzos y recursos para alcanzar grandes propósitos como marca.';
-const valores = "Responsabilidad, Respeto, Calidad, Cooperación, Escucha, Puntualidad";
+const valores = ["Responsabilidad", "Respeto", "Calidad", "Cooperación", "Escucha", "Puntualidad"];
 ---
 
 <Layout title="WoodBox: Sobre nosotros">
@@ -37,7 +37,7 @@ const valores = "Responsabilidad, Respeto, Calidad, Cooperación, Escucha, Puntu
                         <p class="uk-h4">Valores</p>
                     </div>
                 </div>
-                <p>{valores}</p>
+                <p><ul>{valores.map((valor) => <li>{valor}</li>)}</ul></p>
             </div>
         </div>    
     </main>
