--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
 	<Header />
 	<main>
 		<div class="uk-margin uk-border-rounded uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light" data-src="https://images.unsplash.com/photo-1490822180406-880c226c150b?fit=crop&w=650&h=433&q=80" uk-img>
-			<h1>WoodBox_ Custom Works</h1>
+			<h1>WoodBox: Custom Works</h1>
 		</div>
 	</main>
 	<Footer />
