--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,19 +26,6 @@ const phrase = "Guarda tus tesoros con estilo y funcionalidad, mientras añades 
 					</div>
 				</div>
 			</div>
-			
-			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
-				<div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-					<img src="images/light.jpg" alt="" uk-cover>
-					<canvas width="600" height="400"></canvas>
-				</div>
-				<div>
-					<div class="uk-card-body">
-						<h3 class="uk-card-title">Media Right</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-					</div>
-				</div>
-			</div>
 
 			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
 				<div class="uk-card-media-left uk-cover-container">
@@ -53,15 +40,25 @@ const phrase = "Guarda tus tesoros con estilo y funcionalidad, mientras añades 
 				</div>
 			</div>
 		</div>	
-        <div style="border: 1px solid #111;" class="uk-margin uk-box-shadow-medium uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body uk-padding">
-			<h3>Our Newsletter</h3>
-			<form method="POST" action="#">
-				<label for="form_email">Danos tu correo: </label><input id="form_email" class="uk-input uk-form-blank uk-form-width-medium" type="email" placeholder="john.doe@gmail.com" required>
-				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-					<label><input class="uk-checkbox" type="checkbox"> Acepto terminos y condiciones</label>
+        <div uk-grid style="border: 1px solid #111;" class="uk-margin uk-box-shadow-medium uk-grid-collapse uk-child-width-1-2@s uk-align-center uk-border-rounded uk-card uk-card-default uk-card-body uk-padding">
+			<div>
+				<div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+					<img src="assets/newsletter.jpg" alt="" uk-cover>
+					<canvas width="600" height="400"></canvas>
 				</div>
-				<button class="uk-button uk-button-default">Suscribirme</button>
-			</form>
+				<div>
+					<div class="uk-card-body">
+						<h3 class="uk-card-title">Nuestro Newsletter:</h3>
+						<form method="POST" action="#">
+							<label for="form_email">Danos tu correo: </label><input id="form_email" style="border: 1px solid #111;" class="uk-input uk-form-blank uk-form-width-medium" type="email" placeholder="john.doe@gmail.com" required>
+							<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+								<label><input class="uk-checkbox" type="checkbox"> Acepto terminos y condiciones</label>
+							</div>
+							<button class="uk-button uk-button-default">Suscribirme</button>
+						</form>
+					</div>
+				</div>
+			</div>
 		</div>
 	</main>
 	<Footer />
