--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -14,7 +14,7 @@ const base_url = "https://www.woodboxes.co";
                 <ul class="uk-navbar-nav">
                     <li>
                         <a class="uk-logo uk-active" href=`${base_url}/`>
-                            <img class="" width="50px" height="50px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
+                            <img style="filter: invert(1);" width="30px" height="30px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
                             WoodBox
                         </a>
                     </li>
