--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -11,14 +11,10 @@ const base_url = "https://www.woodboxes.co";
         <div uk-navbar class="uk-margin-top uk-border-rounded uk-light uk-padding uk-background-secondary uk-box-shadow-small" style="height: 100px;">
 
             <div class="uk-navbar-left">
-                <ul class="uk-navbar-nav">
-                    <li>
-                        <a class="uk-logo uk-active" href=`${base_url}/`>
-                            <img style="filter: invert(1);" width="30px" height="30px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
-                            WoodBox
-                        </a>
-                    </li>
-                </ul>
+                <a class="uk-active" href=`${base_url}/`>
+                    <img style="filter: invert(1);" width="30px" height="30px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
+                    WoodBox
+                </a>
             </div>
 
             <div class="uk-navbar-right" style="flex-wrap: nowrap;">
