--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -13,7 +13,7 @@ const base_url = "https://www.woodboxes.co";
             <div class="uk-navbar-left">
                 <a class="uk-active" href=`${base_url}/`>
                     <img style="filter: invert(1);" width="30px" height="30px" src="./assets/brand/favicon.ico" alt="WoodBox Logo" />
-                    WoodBox
+                    <strong>WoodBox</strong>
                 </a>
             </div>
 
